--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,19 +8,19 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-      <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
+      <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
     	<img style="position:relative; top:-25px" src="/images/infini-ai.png" height="40" width="auto" class="d-inline-block align-left" alt=""> 
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
+    <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
 			  InfiniAI Lab @ CMU
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">People</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/blog">Blog</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Openings</a></li>
+		<li><a href="https://preminstrel.com/lab-page/">Home</a></li>
+		<li><a href="https://preminstrel.com/lab-page/team">People</a></li>
+		<li><a href="https://preminstrel.com/lab-page/publications">Publications</a></li>
+		<li><a href="https://preminstrel.com/lab-page/research">Research</a></li>
+        <li><a href="https://preminstrel.com/lab-page/blog">Blog</a></li>
+		<li><a href="https://preminstrel.com/lab-page/vacancies">Openings</a></li>
 	  </ul>
 	</div>
   </div>
