--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,4 +20,4 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/js/bootstrap.min.js"></script>
+<script src="https://preminstrel.com/lab-page/js/bootstrap.min.js"></script>
