--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="https://preminstrel.com/lab-page/">Home</a></li>
-		<li><a href="https://preminstrel.com/lab-page/team">People</a></li>
+		<li><a href="https://preminstrel.com/lab-page/people">People</a></li>
 		<li><a href="https://preminstrel.com/lab-page/publications">Publications</a></li>
 		<li><a href="https://preminstrel.com/lab-page/research">Research</a></li>
         <li><a href="https://preminstrel.com/lab-page/blog">Blog</a></li>
