--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 	  </button>
 	
       <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
-    	<img style="position:relative; top:-25px" src="/images/infini-ai.png" height="40" width="auto" class="d-inline-block align-left" alt=""> 
+    	<img style="position:relative; top:-25px" src="https://preminstrel.com/lab-page/images/infini-ai.png" height="40" width="auto" class="d-inline-block align-left" alt=""> 
     <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
 			  InfiniAI Lab @ CMU
 	</div>
