--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,18 +8,18 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-      <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
-    	<img style="position:relative; top:-25px" src="https://preminstrel.com/lab-page/images/infini-ai.png" height="40" width="auto" class="d-inline-block align-left" alt=""> 
-    <a class="navbar-brand" href="https://preminstrel.com/lab-page/">
+      <a class="navbar-brand" href="https://keroro824.github.io/lab-page/">
+    	<img style="position:relative; top:-25px" src="https://keroro824.github.io/lab-page/images/infini-ai.png" height="40" width="auto" class="d-inline-block align-left" alt=""> 
+    <a class="navbar-brand" href="https://keroro824.github.io/lab-page/">
 			  InfiniAI Lab @ CMU
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="https://preminstrel.com/lab-page/">Home</a></li>
-		<li><a href="https://preminstrel.com/lab-page/publications">Publications</a></li>
-        <li><a href="https://preminstrel.com/lab-page/blog">Blog</a></li>
-		<li><a href="https://preminstrel.com/lab-page/people">People</a></li>
-		<li><a href="https://preminstrel.com/lab-page/vacancies">Openings</a></li>
+		<li><a href="https://keroro824.github.io/lab-page/">Home</a></li>
+		<li><a href="https://keroro824.github.io/lab-page/publications">Publications</a></li>
+        <li><a href="https://keroro824.github.io/lab-page/blog">Blog</a></li>
+		<li><a href="https://keroro824.github.io/lab-page/people">People</a></li>
+		<li><a href="https://keroro824.github.io/lab-page/vacancies">Openings</a></li>
 	  </ul>
 	</div>
   </div>
