--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-  <div id="homeid" class="col-sm-12">
+  <div id="homeid" class="col-sm-8">
         <h1>Welcome to the InfiniAI Lab</h1>
 
 	{{ content }}
+  </div>
+  <div id="newsid" class="col-sm-4" >
+	{% include news.html %}
   </div>
 
